--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,5 @@
   title={Graph Learning Indexer: A Contributor-Friendly and Metadata-Rich Platform for Graph Learning Benchmarks},
   author={Ma, Jiaqi and Zhang, Xingjian and Fan, Hezheng and Huang, Jin and Li, Tianyue and Li, Ting Wei and Tu, Yiwen and Zhu, Chenshu and Mei, Qiaozhu},
   journal={arXiv preprint arXiv:2212.04537},
-  year={2022},
-  selected={true}
+  year={2022}
 }
