update paper abs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,5 +6,6 @@
   author={Ma, Jiaqi and Zhang, Xingjian and Fan, Hezheng and Huang, Jin and Li, Tianyue and Li, Ting Wei and Tu, Yiwen and Zhu, Chenshu and Mei, Qiaozhu},
   journal={arXiv preprint arXiv:2212.04537},
   year={2022},
-  selected={true}
+  selected={true},
+  abbr={LoG}
 }
