--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,3 +9,10 @@
   selected={true},
   abbr={LoG}
 }
+
+@article{chen2023harsanyinet,
+  title={HarsanyiNet: Computing Accurate Shapley Values in a Single Forward Propagation},
+  author={Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
+  journal={arXiv preprint arXiv:2304.01811},
+  year={2023}
+}
