--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,5 +14,6 @@
   title={HarsanyiNet: Computing Accurate Shapley Values in a Single Forward Propagation},
   author={Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
   journal={arXiv preprint arXiv:2304.01811},
+  selected={true},
   year={2023}
 }
