--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,5 +15,6 @@
   author={Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
   journal={arXiv preprint arXiv:2304.01811},
   selected={true},
-  year={2023}
+  year={2023},
+  abbr={ICML}
 }
