update cv and pub

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@misc{huang2023llms,
+      title={Can LLMs Effectively Leverage Graph Structural Information: When and Why}, 
+      author={Jin Huang and Xingjian Zhang and Qiaozhu Mei and Jiaqi Ma},
+      year={2023},
+      eprint={2309.16595},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
 
 @article{ma2022graph,
   title={Graph Learning Indexer: A Contributor-Friendly and Metadata-Rich Platform for Graph Learning Benchmarks},
