--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,13 @@
 ---
 ---
+% importabt to add this: selected={true}, 
 @misc{huang2023llms,
       title={Can LLMs Effectively Leverage Graph Structural Information: When and Why}, 
       author={Jin Huang and Xingjian Zhang and Qiaozhu Mei and Jiaqi Ma},
       year={2023},
       eprint={2309.16595},
       archivePrefix={arXiv},
+      selected={true}, 
       primaryClass={cs.LG}
 }
 
