--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
       eprint={2309.16595},
       archivePrefix={arXiv},
       selected={true}, 
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
+      abbr={NeurIPS, GLFrontier}
 }
 
 @article{ma2022graph,
