update paper and readme

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
       archivePrefix={arXiv},
       selected={true}, 
       primaryClass={cs.LG},
-      abbr={NeurIPS, GLFrontier}
+      abbr={TMLR}
 }
 
 @article{ma2022graph,
