--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 % importabt to add this: selected={true}, 
+@misc{zhang2024massw,
+      title={MASSW: A New Dataset and Benchmark Tasks for AI-Assisted Scientific Workflows}, 
+      author={Xingjian Zhang and Yutong Xie and Jin Huang and Jinge Ma and Zhaoying Pan and Qijia Liu and Ziyang Xiong and Tolga Ergen and Dongsub Shim and Honglak Lee and Qiaozhu Mei},
+      year={2024},
+      eprint={2406.06357},
+      selected={true}, 
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{huang2024dcabench,
+      title={DCA-Bench: A Benchmark for Dataset Curation Agents}, 
+      author={Benhao Huang and Yingzhuo Yu and Jin Huang and Xingjian Zhang and Jiaqi Ma},
+      year={2024},
+      eprint={2406.07275},
+      selected={true}, 
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
+}
+
 @misc{huang2023llms,
       title={Can LLMs Effectively Leverage Graph Structural Information: When and Why}, 
       author={Jin Huang and Xingjian Zhang and Qiaozhu Mei and Jiaqi Ma},
