--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
       eprint={2406.06357},
       selected={true}, 
       archivePrefix={arXiv},
-      primaryClass={cs.CL}
+      primaryClass={cs.CL},
+      abbr={arxiv}
 }
 
 @misc{huang2024dcabench,
@@ -18,7 +19,8 @@
       eprint={2406.07275},
       selected={true}, 
       archivePrefix={arXiv},
-      primaryClass={cs.AI}
+      primaryClass={cs.AI},
+      abbr={arxiv}
 }
 
 @misc{huang2023llms,
