--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,6 +31,7 @@
       archivePrefix={arXiv},
       selected={true}, 
       primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2309.16595},
       abbr={TMLR}
 }
 
