--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,26 @@
 ---
 ---
 % importabt to add this: selected={true}, 
+@article{li2024scilitllm,
+  title={SciLitLLM: How to Adapt LLMs for Scientific Literature Understanding},
+  author={Li, Sihang and Huang, Jin and Zhuang, Jiaxi and Shi, Yaorui and Cai, Xiaochen and Xu, Mingjun and Wang, Xiang and Zhang, Linfeng and Ke, Guolin and Cai, Hengxing},
+  journal={arXiv preprint arXiv:2408.15545},
+  selected={true}, 
+  year={2024}
+}
+
+@article{cai2024sciassess,
+  title={Sciassess: Benchmarking llm proficiency in scientific literature analysis},
+  author={Cai, Hengxing and Cai, Xiaochen and Chang, Junhan and Li, Sihang and Yao, Lin and Wang, Changxin and Gao, Zhifeng and Li, Yongge and Lin, Mujie and Yang, Shuwen and others},
+  journal={arXiv preprint arXiv:2403.01976},
+  year={2024}
+}
+
 @misc{zhang2024massw,
       title={MASSW: A New Dataset and Benchmark Tasks for AI-Assisted Scientific Workflows}, 
       author={Xingjian Zhang and Yutong Xie and Jin Huang and Jinge Ma and Zhaoying Pan and Qijia Liu and Ziyang Xiong and Tolga Ergen and Dongsub Shim and Honglak Lee and Qiaozhu Mei},
       year={2024},
       eprint={2406.06357},
-      selected={true}, 
       archivePrefix={arXiv},
       primaryClass={cs.CL},
       abbr={arxiv}
@@ -17,7 +31,6 @@
       author={Benhao Huang and Yingzhuo Yu and Jin Huang and Xingjian Zhang and Jiaqi Ma},
       year={2024},
       eprint={2406.07275},
-      selected={true}, 
       archivePrefix={arXiv},
       primaryClass={cs.AI},
       abbr={arxiv}
@@ -40,7 +53,6 @@
   author={Ma, Jiaqi and Zhang, Xingjian and Fan, Hezheng and Huang, Jin and Li, Tianyue and Li, Ting Wei and Tu, Yiwen and Zhu, Chenshu and Mei, Qiaozhu},
   journal={arXiv preprint arXiv:2212.04537},
   year={2022},
-  selected={true},
   abbr={LoG}
 }
 
@@ -48,7 +60,6 @@
   title={HarsanyiNet: Computing Accurate Shapley Values in a Single Forward Propagation},
   author={Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
   journal={arXiv preprint arXiv:2304.01811},
-  selected={true},
   year={2023},
   abbr={ICML}
 }
