--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 % importabt to add this: selected={true}, 
 @article{li2024scilitllm,
   title={SciLitLLM: How to Adapt LLMs for Scientific Literature Understanding},
-  author={Li, Sihang and Huang, Jin and Zhuang, Jiaxi and Shi, Yaorui and Cai, Xiaochen and Xu, Mingjun and Wang, Xiang and Zhang, Linfeng and Ke, Guolin and Cai, Hengxing},
+  author={Li*, Sihang and Huang*, Jin and Zhuang, Jiaxi and Shi, Yaorui and Cai, Xiaochen and Xu, Mingjun and Wang, Xiang and Zhang, Linfeng and Ke, Guolin and Cai, Hengxing},
   journal={arXiv preprint arXiv:2408.15545},
   selected={true}, 
   year={2024}
