--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,30 +36,50 @@
       abbr={arxiv}
 }
 
-@misc{huang2023llms,
-      title={Can LLMs Effectively Leverage Graph Structural Information: When and Why}, 
+@article{
+      huang2024can,
+      title={Can {LLM}s Effectively Leverage Graph Structural Information through Prompts, and Why?},
       author={Jin Huang and Xingjian Zhang and Qiaozhu Mei and Jiaqi Ma},
-      year={2023},
-      eprint={2309.16595},
-      archivePrefix={arXiv},
+      journal={Transactions on Machine Learning Research},
+      issn={2835-8856},
       selected={true}, 
-      primaryClass={cs.LG},
-      url={https://arxiv.org/abs/2309.16595},
+      year={2024},
+      url={https://openreview.net/forum?id=L2jRavXRxs},
       abbr={TMLR}
 }
 
-@article{ma2022graph,
-  title={Graph Learning Indexer: A Contributor-Friendly and Metadata-Rich Platform for Graph Learning Benchmarks},
-  author={Ma, Jiaqi and Zhang, Xingjian and Fan, Hezheng and Huang, Jin and Li, Tianyue and Li, Ting Wei and Tu, Yiwen and Zhu, Chenshu and Mei, Qiaozhu},
-  journal={arXiv preprint arXiv:2212.04537},
-  year={2022},
-  abbr={LoG}
+
+@InProceedings{pmlr-v198-ma22a,
+  title = 	 {Graph Learning Indexer: A Contributor-Friendly and Metadata-Rich Platform for Graph Learning Benchmarks},
+  author =       {Ma, Jiaqi and Zhang, Xingjian and Fan, Hezheng and Huang, Jin and Li, Tianyue and Li, Ting Wei and Tu, Yiwen and Zhu, Chenshu and Mei, Qiaozhu},
+  booktitle = 	 {Proceedings of the First Learning on Graphs Conference},
+  pages = 	 {7:1--7:23},
+  year = 	 {2022},
+  editor = 	 {Rieck, Bastian and Pascanu, Razvan},
+  volume = 	 {198},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {09--12 Dec},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v198/ma22a/ma22a.pdf},
+  url = 	 {https://proceedings.mlr.press/v198/ma22a.html},
+  abbr = {LoG 2022},
+  abstract = 	 {Establishing open and general benchmarks has been a critical driving force behind the success of modern machine learning techniques. As machine learning is being applied to broader domains and tasks, there is a need to establish richer and more diverse benchmarks to better reflect the reality of the application scenarios. Graph learning is an emerging field of machine learning that urgently needs more and better benchmarks. To accommodate the need, we introduce Graph Learning Indexer (GLI), a benchmark curation platform for graph learning. In comparison to existing graph learning benchmark libraries, GLI highlights two novel design objectives. First, GLI is designed to incentivize \emph{dataset contributors}. In particular, we incorporate various measures to minimize the effort of contributing and maintaining a dataset, increase the usability of the contributed dataset, as well as encourage attributions to different contributors of the dataset. Second, GLI is designed to curate a knowledge base, instead of a plain collection, of benchmark datasets. We use multiple sources of meta information to augment the benchmark datasets with \emph{rich characteristics}, so that they can be easily selected and used in downstream research or development. The source code of GLI is available at \url{https://github.com/Graph-Learning-Benchmarks/gli}. }
 }
 
-@article{chen2023harsanyinet,
-  title={HarsanyiNet: Computing Accurate Shapley Values in a Single Forward Propagation},
-  author={Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
-  journal={arXiv preprint arXiv:2304.01811},
-  year={2023},
-  abbr={ICML}
+
+@InProceedings{pmlr-v202-chen23s,
+  title = 	 {{H}arsanyi{N}et: Computing Accurate Shapley Values in a Single Forward Propagation},
+  author =       {Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
+  booktitle = 	 {Proceedings of the 40th International Conference on Machine Learning},
+  pages = 	 {4804--4825},
+  year = 	 {2023},
+  editor = 	 {Krause, Andreas and Brunskill, Emma and Cho, Kyunghyun and Engelhardt, Barbara and Sabato, Sivan and Scarlett, Jonathan},
+  volume = 	 {202},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {23--29 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v202/chen23s/chen23s.pdf},
+  url = 	 {https://proceedings.mlr.press/v202/chen23s.html},
+  abbr = {ICML 2023},
+  abstract = 	 {The Shapley value is widely regarded as a trustworthy attribution metric. However, when people use Shapley values to explain the attribution of input variables of a deep neural network (DNN), it usually requires a very high computational cost to approximate relatively accurate Shapley values in real-world applications. Therefore, we propose a novel network architecture, the HarsanyiNet, which makes inferences on the input sample and simultaneously computes the exact Shapley values of the input variables in a single forward propagation. The HarsanyiNet is designed on the theoretical foundation that the Shapley value can be reformulated as the redistribution of Harsanyi interactions encoded by the network.}
 }
