--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,8 @@
   author={Li*, Sihang and Huang*, Jin and Zhuang, Jiaxi and Shi, Yaorui and Cai, Xiaochen and Xu, Mingjun and Wang, Xiang and Zhang, Linfeng and Ke, Guolin and Cai, Hengxing},
   journal={arXiv preprint arXiv:2408.15545},
   selected={true}, 
-  year={2024}
+  year={2024},
+  html={http://www.arxiv.org/abs/2408.15545}
 }
 
 @article{cai2024sciassess,
@@ -36,8 +37,7 @@
       abbr={arxiv}
 }
 
-@article{
-      huang2024can,
+@article{huang2024can,
       title={Can {LLM}s Effectively Leverage Graph Structural Information through Prompts, and Why?},
       author={Jin Huang and Xingjian Zhang and Qiaozhu Mei and Jiaqi Ma},
       journal={Transactions on Machine Learning Research},
@@ -45,6 +45,7 @@
       selected={true}, 
       year={2024},
       url={https://openreview.net/forum?id=L2jRavXRxs},
+      html={https://arxiv.org/abs/2309.16595},
       abbr={TMLR}
 }
 
