--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,9 @@
   journal={arXiv preprint arXiv:2408.15545},
   selected={true}, 
   year={2024},
-  html={http://www.arxiv.org/abs/2408.15545}
+  html={http://www.arxiv.org/abs/2408.15545},
+  blog={https://scilitllms.github.io},
+  code={https://github.com/dptech-corp/Uni-SMART/tree/main/SciLitLLM}
 }
 
 @article{cai2024sciassess,
