--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,14 +9,15 @@
   year={2024},
   html={http://www.arxiv.org/abs/2408.15545},
   blog={https://scilitllms.github.io},
-  code={https://github.com/dptech-corp/Uni-SMART/tree/main/SciLitLLM}
+  code={https://github.com/dptech-corp/Uni-SMART/tree/main/SciLitLLM},
 }
 
 @article{cai2024sciassess,
   title={Sciassess: Benchmarking llm proficiency in scientific literature analysis},
   author={Cai, Hengxing and Cai, Xiaochen and Chang, Junhan and Li, Sihang and Yao, Lin and Wang, Changxin and Gao, Zhifeng and Li, Yongge and Lin, Mujie and Yang, Shuwen and others},
   journal={arXiv preprint arXiv:2403.01976},
-  year={2024}
+  year={2024},
+  html={https://arxiv.org/abs/2403.01976},
 }
 
 @misc{zhang2024massw,
@@ -26,7 +27,8 @@
       eprint={2406.06357},
       archivePrefix={arXiv},
       primaryClass={cs.CL},
-      abbr={arxiv}
+      abbr={arxiv},
+      html={https://arxiv.org/abs/2406.06357}
 }
 
 @misc{huang2024dcabench,
@@ -36,7 +38,8 @@
       eprint={2406.07275},
       archivePrefix={arXiv},
       primaryClass={cs.AI},
-      abbr={arxiv}
+      abbr={arxiv},
+      html={https://arxiv.org/abs/2406.07275}
 }
 
 @article{huang2024can,
