--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,8 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL},
       abbr={arxiv},
-      html={https://arxiv.org/abs/2406.06357}
+      html={https://arxiv.org/abs/2406.06357},
+      code={https://github.com/xingjian-zhang/massw}
 }
 
 @misc{huang2024dcabench,
@@ -39,7 +40,8 @@
       archivePrefix={arXiv},
       primaryClass={cs.AI},
       abbr={arxiv},
-      html={https://arxiv.org/abs/2406.07275}
+      html={https://arxiv.org/abs/2406.07275},
+      code={https://github.com/TRAIS-Lab/dca-bench}
 }
 
 @article{huang2024can,
@@ -51,7 +53,8 @@
       year={2024},
       url={https://openreview.net/forum?id=L2jRavXRxs},
       html={https://arxiv.org/abs/2309.16595},
-      abbr={TMLR}
+      abbr={TMLR},
+      code={https://github.com/TRAIS-Lab/LLM-Structured-Data},
 }
 
 
