--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @article{li2024scilitllm,
   title={SciLitLLM: How to Adapt LLMs for Scientific Literature Understanding},
   author={Li*, Sihang and Huang*, Jin and Zhuang, Jiaxi and Shi, Yaorui and Cai, Xiaochen and Xu, Mingjun and Wang, Xiang and Zhang, Linfeng and Ke, Guolin and Cai, Hengxing},
-  journal={arXiv preprint arXiv:2408.15545},
+  journal={Foundation Models for Science Workshop, NeurIPS 2024},
   selected={true}, 
   year={2024},
   html={http://www.arxiv.org/abs/2408.15545},
