--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,9 +4,9 @@
 @article{li2024scilitllm,
   title={SciLitLLM: How to Adapt LLMs for Scientific Literature Understanding},
   author={Li*, Sihang and Huang*, Jin and Zhuang, Jiaxi and Shi, Yaorui and Cai, Xiaochen and Xu, Mingjun and Wang, Xiang and Zhang, Linfeng and Ke, Guolin and Cai, Hengxing},
-  journal={Foundation Models for Science Workshop, NeurIPS},
+  journal={ICLR},
   selected={true}, 
-  year={2024},
+  year={2025},
   html={http://www.arxiv.org/abs/2408.15545},
   blog={https://scilitllms.github.io},
   code={https://github.com/dptech-corp/Uni-SMART/tree/main/SciLitLLM},
@@ -75,4 +75,19 @@
   abstract = 	 {Establishing open and general benchmarks has been a critical driving force behind the success of modern machine learning techniques. As machine learning is being applied to broader domains and tasks, there is a need to establish richer and more diverse benchmarks to better reflect the reality of the application scenarios. Graph learning is an emerging field of machine learning that urgently needs more and better benchmarks. To accommodate the need, we introduce Graph Learning Indexer (GLI), a benchmark curation platform for graph learning. In comparison to existing graph learning benchmark libraries, GLI highlights two novel design objectives. First, GLI is designed to incentivize \emph{dataset contributors}. In particular, we incorporate various measures to minimize the effort of contributing and maintaining a dataset, increase the usability of the contributed dataset, as well as encourage attributions to different contributors of the dataset. Second, GLI is designed to curate a knowledge base, instead of a plain collection, of benchmark datasets. We use multiple sources of meta information to augment the benchmark datasets with \emph{rich characteristics}, so that they can be easily selected and used in downstream research or development. The source code of GLI is available at \url{https://github.com/Graph-Learning-Benchmarks/gli}. }
 }
 
-
+@InProceedings{pmlr-v202-chen23s,
+  title = 	 {{H}arsanyi{N}et: Computing Accurate Shapley Values in a Single Forward Propagation},
+  author =       {Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
+  booktitle = 	 {Proceedings of the 40th International Conference on Machine Learning},
+  pages = 	 {4804--4825},
+  year = 	 {2023},
+  editor = 	 {Krause, Andreas and Brunskill, Emma and Cho, Kyunghyun and Engelhardt, Barbara and Sabato, Sivan and Scarlett, Jonathan},
+  volume = 	 {202},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {23--29 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v202/chen23s/chen23s.pdf},
+  url = 	 {https://proceedings.mlr.press/v202/chen23s.html},
+  abbr = {ICML 2023},
+  abstract = 	 {The Shapley value is widely regarded as a trustworthy attribution metric. However, when people use Shapley values to explain the attribution of input variables of a deep neural network (DNN), it usually requires a very high computational cost to approximate relatively accurate Shapley values in real-world applications. Therefore, we propose a novel network architecture, the HarsanyiNet, which makes inferences on the input sample and simultaneously computes the exact Shapley values of the input variables in a single forward propagation. The HarsanyiNet is designed on the theoretical foundation that the Shapley value can be reformulated as the redistribution of Harsanyi interactions encoded by the network.}
+}
