--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,9 +4,10 @@
 @article{li2024scilitllm,
   title={SciLitLLM: How to Adapt LLMs for Scientific Literature Understanding},
   author={Li*, Sihang and Huang*, Jin and Zhuang, Jiaxi and Shi, Yaorui and Cai, Xiaochen and Xu, Mingjun and Wang, Xiang and Zhang, Linfeng and Ke, Guolin and Cai, Hengxing},
-  journal={ICLR},
+  journal={International Conference on Learning Representations},
   selected={true}, 
   year={2025},
+  abbr = {ICLR 2025},
   html={http://www.arxiv.org/abs/2408.15545},
   blog={https://scilitllms.github.io},
   code={https://github.com/dptech-corp/Uni-SMART/tree/main/SciLitLLM},
@@ -78,14 +79,8 @@
 @InProceedings{pmlr-v202-chen23s,
   title = 	 {{H}arsanyi{N}et: Computing Accurate Shapley Values in a Single Forward Propagation},
   author =       {Chen, Lu and Lou, Siyu and Zhang, Keyan and Huang, Jin and Zhang, Quanshi},
-  booktitle = 	 {Proceedings of the 40th International Conference on Machine Learning},
-  pages = 	 {4804--4825},
+  booktitle = 	 {International Conference on Machine Learning},
   year = 	 {2023},
-  editor = 	 {Krause, Andreas and Brunskill, Emma and Cho, Kyunghyun and Engelhardt, Barbara and Sabato, Sivan and Scarlett, Jonathan},
-  volume = 	 {202},
-  series = 	 {Proceedings of Machine Learning Research},
-  month = 	 {23--29 Jul},
-  publisher =    {PMLR},
   pdf = 	 {https://proceedings.mlr.press/v202/chen23s/chen23s.pdf},
   url = 	 {https://proceedings.mlr.press/v202/chen23s.html},
   abbr = {ICML 2023},
