--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -54,7 +54,7 @@
       year={2024},
       url={https://openreview.net/forum?id=L2jRavXRxs},
       html={https://arxiv.org/abs/2309.16595},
-      abbr={TMLR},
+      abbr={TMLR 2024},
       code={https://github.com/TRAIS-Lab/LLM-Structured-Data},
 }
 
