--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,19 +16,18 @@
 @article{cai2024sciassess,
   title={Sciassess: Benchmarking llm proficiency in scientific literature analysis},
   author={Cai, Hengxing and Cai, Xiaochen and Chang, Junhan and Li, Sihang and Yao, Lin and Wang, Changxin and Gao, Zhifeng and Li, Yongge and Lin, Mujie and Yang, Shuwen and others},
-  journal={arXiv preprint arXiv:2403.01976},
-  year={2024},
+  journal={The Nations of the Americas Chapter of the Association for Computational Linguistics},
+  abbr={NAACL 2025},
+  year={2025},
   html={https://arxiv.org/abs/2403.01976},
 }
 
 @misc{zhang2024massw,
       title={MASSW: A New Dataset and Benchmark Tasks for AI-Assisted Scientific Workflows}, 
       author={Xingjian Zhang and Yutong Xie and Jin Huang and Jinge Ma and Zhaoying Pan and Qijia Liu and Ziyang Xiong and Tolga Ergen and Dongsub Shim and Honglak Lee and Qiaozhu Mei},
-      year={2024},
-      eprint={2406.06357},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      abbr={arxiv},
+      year={2025},
+      journal={The Nations of the Americas Chapter of the Association for Computational Linguistics},
+      abbr={NAACL 2025},
       html={https://arxiv.org/abs/2406.06357},
       code={https://github.com/xingjian-zhang/massw}
 }
