--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
 }
 
 @article{cai2024sciassess,
-  title={Sciassess: Benchmarking llm proficiency in scientific literature analysis},
+  title={SciAssess: Benchmarking llm proficiency in scientific literature analysis},
   author={Cai, Hengxing and Cai, Xiaochen and Chang, Junhan and Li, Sihang and Yao, Lin and Wang, Changxin and Gao, Zhifeng and Li, Yongge and Lin, Mujie and Yang, Shuwen and others},
   journal={The Nations of the Americas Chapter of the Association for Computational Linguistics},
   abbr={NAACL 2025},
@@ -39,7 +39,6 @@
       eprint={2406.07275},
       archivePrefix={arXiv},
       primaryClass={cs.AI},
-      abbr={arxiv},
       html={https://arxiv.org/abs/2406.07275},
       code={https://github.com/TRAIS-Lab/dca-bench}
 }
